<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ubuntu"
    android:background="@drawable/secondary_background"
    tools:context=".main_windows.ProfileActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/muli"
        android:rotation="-360"
        android:rotationX="-360"
        android:rotationY="-360"
        android:text="@string/Промокод"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/muli"
        android:rotation="-360"
        android:rotationX="-360"
        android:rotationY="-360"
        android:text="@string/Устройства"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/exit"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/muli"
        android:rotation="-360"
        android:rotationX="-360"
        android:rotationY="-360"
        android:text="@string/Выйти"
        android:textStyle="bold"
        app:backgroundTint="#dc2c1d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Имяпо"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnav"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/bottom_color"
        app:itemBackground="@color/bottom_color"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />


    <Button
        android:id="@+id/button2"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/muli"
        android:rotation="-360"
        android:rotationX="-360"
        android:rotationY="-360"
        android:text="@string/Поддержка"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#c35f4f"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ВашБаланс"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="151dp"
        android:layout_height="134dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_ucon_foreground"
        android:contentDescription="@string/blank" />

</androidx.constraintlayout.widget.ConstraintLayout>